--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     <section id="gallery">
         <h2>Gallery</h2>
         <div class="gallery">
-            <img src="Guinea01.jpg" alt="Image 1 description">
-            <img src="Guinea02.jpg" alt="Image 2 description">
-            <img src="Guinea03.jpg" alt="Image 3 description">
-            <img src="Guinea04.jpg" alt="Image 4 description">
-            <img src="Guinea05.jpg" alt="Image 5 description">
-            <img src="Guinea06.jpg" alt="Image 6 description">
+            <img src="Guinea01.jpeg" alt="Image 1 description">
+            <img src="Guinea02.jpeg" alt="Image 2 description">
+            <img src="Guinea03.jpeg" alt="Image 3 description">
+            <img src="Guinea04.jpeg" alt="Image 4 description">
+            <img src="Guinea05.jpeg" alt="Image 5 description">
+            <img src="Guinea06.jpeg" alt="Image 6 description">
         </div>
     </section>
     
